--- a/ReAct/BMIAppProject/package.json
+++ b/ReAct/BMIAppProject/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.4",
+    "react-d3-speedometer": "^0.4.2",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8"
